--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,10 @@
+[user]
+    name = Paul Jaworski
+    email = paulmattjaws@gmail.com
+[github]
+    user = pjaws
+[credential]
+	helper = osxkeychain
 [alias]
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
